<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".addNoteActivity">

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/head_note"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description_note"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle" />

    <Spinner
        android:entries="@array/days_of_week"
        android:id="@+id/spinnerDaysOfWeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

    <RadioGroup
        android:id="@+id/radioGroupPriority"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDaysOfWeek">

        <RadioButton
            android:checked="true"
            android:id="@+id/radioButton"
            android:layout_width="136dp"
            android:layout_height="match_parent"
            android:background="@android:color/holo_red_light"
            android:text="@string/_1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="129dp"
            android:layout_height="match_parent"
            android:background="@android:color/holo_orange_dark"
            android:text="@string/_2" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:background="@android:color/holo_green_dark"
            android:text="@string/_3" />
    </RadioGroup>

    <Button
        android:onClick="onClickAddNote"
        android:backgroundTint="@color/purple_200"
        android:id="@+id/buttonSaveNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupPriority" />

</androidx.constraintlayout.widget.ConstraintLayout>